// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component only renders links to pages that has a title 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "1gwj20b",
      "next": undefined,
      "styles": "
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 5rem 0;
",
    }
  }
>
  <li>
    <a
      css={
        Object {
          "map": undefined,
          "name": "1guobqr",
          "next": undefined,
          "styles": "
  color: var(--black7) !important;
  text-transform: uppercase;
  text-decoration: none !important;
  font-size: 1.4rem;
  font-weight: normal;
  font-family: var(--sans-serif);
  vertical-align: middle;

  &:hover {
    color: var(--brand-light) !important;
  }
",
        }
      }
      href="/learn/test-slug"
      rel="prev"
    >
      ←   Prev
    </a>
  </li>
  <li />
</ul>
`;

exports[`Pagination component renders correctly when there is no next page 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "1gwj20b",
      "next": undefined,
      "styles": "
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 5rem 0;
",
    }
  }
>
  <li>
    <a
      css={
        Object {
          "map": undefined,
          "name": "1guobqr",
          "next": undefined,
          "styles": "
  color: var(--black7) !important;
  text-transform: uppercase;
  text-decoration: none !important;
  font-size: 1.4rem;
  font-weight: normal;
  font-family: var(--sans-serif);
  vertical-align: middle;

  &:hover {
    color: var(--brand-light) !important;
  }
",
        }
      }
      href="/learn/test-slug"
      rel="prev"
    >
      ←   Prev
    </a>
  </li>
  <li />
</ul>
`;

exports[`Pagination component renders correctly when there is no previous page 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "1gwj20b",
      "next": undefined,
      "styles": "
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 5rem 0;
",
    }
  }
>
  <li />
  <li>
    <a
      css={
        Object {
          "map": undefined,
          "name": "1guobqr",
          "next": undefined,
          "styles": "
  color: var(--black7) !important;
  text-transform: uppercase;
  text-decoration: none !important;
  font-size: 1.4rem;
  font-weight: normal;
  font-family: var(--sans-serif);
  vertical-align: middle;

  &:hover {
    color: var(--brand-light) !important;
  }
",
        }
      }
      href="/learn/test-slug"
      rel="next"
    >
      Next   →
    </a>
  </li>
</ul>
`;

exports[`Pagination component renders links to the next and previous page 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "1gwj20b",
      "next": undefined,
      "styles": "
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 5rem 0;
",
    }
  }
>
  <li>
    <a
      css={
        Object {
          "map": undefined,
          "name": "1guobqr",
          "next": undefined,
          "styles": "
  color: var(--black7) !important;
  text-transform: uppercase;
  text-decoration: none !important;
  font-size: 1.4rem;
  font-weight: normal;
  font-family: var(--sans-serif);
  vertical-align: middle;

  &:hover {
    color: var(--brand-light) !important;
  }
",
        }
      }
      href="/learn/test-slug"
      rel="prev"
    >
      ←   Prev
    </a>
  </li>
  <li>
    <a
      css={
        Object {
          "map": undefined,
          "name": "1guobqr",
          "next": undefined,
          "styles": "
  color: var(--black7) !important;
  text-transform: uppercase;
  text-decoration: none !important;
  font-size: 1.4rem;
  font-weight: normal;
  font-family: var(--sans-serif);
  vertical-align: middle;

  &:hover {
    color: var(--brand-light) !important;
  }
",
        }
      }
      href="/learn/test-slug"
      rel="next"
    >
      Next   →
    </a>
  </li>
</ul>
`;
